Update 01_dOC AND HEADINGS.html

--- a/01_dOC AND HEADINGS.html
+++ b/01_dOC AND HEADINGS.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>My Cool Site</title>
+  <title>JS Bin</title>
 </head>
 <body>
-  <h1>HTML</h1>
+<h1>HTML</h1>
   <h2>CSS</h2>
   <h3>JS</h3>
   <h4>SQL</h4>
@@ -34,6 +34,12 @@
     <li>Two Eggs</li>
     <li>1 cup Milk</li>
   </ul>
+  <p>----seperation--------</p>
+  <ul>
+    <li><img src="https://images.pexels.com/photos/239325/pexels-photo-239325.jpeg?cs=srgb&dl=colorful-colourful-delicious-239325.jpg&fm=jpg" alt="sweets"></li>
+    <li><img src="https://images.pexels.com/photos/1362534/pexels-photo-1362534.jpeg?cs=srgb&dl=cone-cups-delicious-1362534.jpg&fm=jpg" alt="Icecreams"></li>
+  </ul>
+  <img src="https://images.pexels.com/photos/1342340/pexels-photo-1342340.jpeg?cs=srgb&dl=assorted-candies-colorful-1342340.jpg&fm=jpg" alt="ChocoBrownie">
 </body>
 </html>
       
